# cimnet

./: .gitignore  Makefile  README.md
.github/workflows/: ccpp.yml
beta/: Makefile  test.cc
cimnet/: _base_net.h  _exception.h  _types.h  algorithms.h  io.h  network.h  random.h
docs/: Makefile  make.bat  zh-cn.md
docs/source/: about-cpp.rst  conf.py  credits-license.rst  index.rst  install.rst  usage.rst
docs/source/_static/: custom.css
docs/source/reference/: di_network.rst  exceptions.rst  impl-networks.rst  intro.rst  network.rst  rng.rst  types.rst
examples/: Makefile  README.md  internet.cc  sir_model.cc
include/: _exception.h  network.h
test/: CMakeLists.txt  Makefile  test_algorithms.cc  test_base.cc  test_io.cc  test_network.cc
